testsuite/tests/lkt/import/invalid/casing_1.lkt
import common as Common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}

class Example: Common.FooNode implements TokenNode {
}
